# pdf-to-audiobook

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/ffmpeg/: join.py  speed.py
src/helpers/: file.py
src/models/: __init__.py  cli_options.py  worker.py
src/pdf_converter/: converter.py  markdown.py
src/processor/: pdf_mp3_converter.py
src/pubsub/: README.md  __init__.py  base.py  publisher.py  subscriber.py
src/tts/: coqui_tts.py  tts.py
src/utils/: __init__.py  logging.py
src/validators/: __init__.py  args.py  args_test.py
src/workers/: __init__.py  base.py  markdown_to_audio_coquitts_worker.py  mp3_converter_worker.py  pdf_text_worker.py
