[project]
name = "pdf-to-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.14.3",
    "ffmpy>=1.0.0",
    "markdown>=3.10",
    "marker-pdf[full]>=1.10.1",
    "tts>=0.22.0",
]
